--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
-    <title>登入 - 國家發展委員會</title>
+    <title>台灣就業金卡網站-維護中</title>
 
     <link href="/css/output.css" rel="stylesheet" />
 
@@ -14,7 +14,8 @@
         <form asp-controller="Login" asp-action="ProcessLogin" method="POST"
               class="bg-white my-auto rounded-lg shadow-md flex flex-col p-8 md:p-[60px] w-4/5 md:w-[496px]">          
             <div class="mx-auto">
-                <p class="systemtitle-thin">就業金卡會商案件資訊系統</p>            
+                <p class="systemtitle-thin">台灣就業金卡網站</p>            
+                <p>網站目前正在維護中，暫時無法提供服務。 倘造成不便，敬請見諒。</p>
             </div>
 
         
