--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <form asp-controller="Login" asp-action="ProcessLogin" method="POST"
               class="bg-white my-auto rounded-lg shadow-md flex flex-col p-8 md:p-[60px] w-4/5 md:w-[496px]">          
             <div class="mx-auto">
-                <p class="systemtitle-thin">台灣就業金卡網站</p>            
-                <p>網站目前正在維護中，暫時無法提供服務。 倘造成不便，敬請見諒。</p>
+                <p class="systemtitle-thin" style="text-align:center;">台灣就業金卡網站</p>            
+                <p style="text-align: center;">網站目前正在維護中，暫時無法提供服務。 倘造成不便，敬請見諒。</p>
             </div>
 
         
